Fix Tabs collapsed focusring

--- a/packages/@adobe/spectrum-css-temp/components/inputgroup/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/inputgroup/index.css
@@ -36,7 +36,6 @@ governing permissions and limitations under the License.
   flex-wrap: nowrap;
   min-width: calc(2.5 * var(--spectrum-dropdown-height));
   border-radius: var(--spectrum-border-radius);
-  background: var(--spectrum-textfield-background-color);
 
   .spectrum-FieldButton {
     padding: var(--spectrum-combobox-fieldbutton-inset);
