--- a/packages/@adobe/spectrum-css-temp/components/inputgroup/skin.css
+++ b/packages/@adobe/spectrum-css-temp/components/inputgroup/skin.css
@@ -11,6 +11,8 @@ governing permissions and limitations under the License.
 */
 
 .spectrum-InputGroup {
+  background: var(--spectrum-textfield-background-color);
+
   .spectrum-FieldButton {
     &:before {
       border-color: var(--spectrum-textfield-border-color);
